frontend/test/should_fail/index_multiple_return_value_mismatch.grg
#using "index_multiple_model.gm"

function f(var s:int) : int
{
	return(s);
}

rule i {
	if{ f(nodesFromIndexMultipleFromTo(Ni, 0, 1)) > 0; }
	
	modify {
	}
}
